# rostek_localization

./: 2022-07-18-11-57-13.bag.active  README.md  Save.pgm  Save.yaml  test071822.pgm  test071822.yaml
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: rostek_localization.pc
devel/share/rostek_localization/cmake/: rostek_localizationConfig.cmake
rostek_localization/: CMakeLists.txt
rostek_localization/include/rostek_localization/: robot_localization.h
rostek_localization/src/: test.cpp
src/: 1.bag  2.active  3.bag  4.bag  5.bag  6.bag
src/rostek_localization/: CMakeLists.txt
src/rostek_localization/maps/: Save.yaml
src/rostek_localization/src/: test.cpp
